--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      <main>
         <div class="container-main">
             <div class="container-text">
-                <img src="assets/image 1.jpg" alt="">
+                <img src="assets/image 3.jpg" alt="">
                 <header class="welcome-text">
 
         <!-- Welcome Speech -->
@@ -30,13 +30,13 @@
             </header>
             <p>Selamat datang di Katik!</p>
             <p>Katik adalah kalkulator online berbentuk website yang digunakan untuk melakukan kalkulasi sederhana hingga rumit.
-               Dalam wesbite ini, katik berfokus pada perhitungan luas serta keliling dari persgi dan persegi panjang.</p>
+               Dalam wesbite ini, katik berfokus pada perhitungan luas serta keliling dari persegi dan persegi panjang.</p>
         
         </div>
         <!-- Navigasi Fitur -->
         </div class="nav-fitur">
             <details class="details-example">
-                <summary>persegi</summary>
+                <summary>Persegi</summary>
                 <div id="persegi">
                     <!-- Section Luas -->
                     <section>
@@ -47,7 +47,7 @@
                     <!-- Gambar Luas -->
                      <img src="assests/persegi 1.png" alt="">
                      <!-- Rumus -->
-                      <div> class="Rumus"
+                      <div class="rumus">
                         <p>Rumus luas persegi yaitu</p>
                         <h2>L = s × s</h2>
                         <p>Yang mana: L = luas, s = sisi</p>
@@ -145,7 +145,7 @@
     </div>
     </main>
     <footer>
-        <p>Made by <a href="https://github.com/revou-fundamental-course/17-mar-25-kiiaya14.git" target="_blank"></a>Citra</a>@2025</p>
+        <p>Made by </a>Citra</a>@2025</p>
     </footer>
    </div>
    <script src="js/script.js"></script>
