--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Header -->
-    <header class="=main-header">
+    <header class="main-header">
         <h1>Katik - Kalkulator Matematik </h1>
     </header>
 
