--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class="wrapper">
     <!-- Header -->
     <header class="main-header">
         <h1>Katik - Kalkulator Matematik </h1>
